# opto

./: .env.example  .gitignore  LICENSE  README.md  optoctl  pyproject.toml  run_dashboard.sh  setup.sh
benchmarks/: run_benchmark.py
opto/: __init__.py  cache.py  cachealign.py  cli.py  config.py  copilot_auth.py  pipeline.py  quality.py  relevance.py  router.py  telemetry.py  tokens.py  types.py
opto/compressors/: __init__.py  base.py  code.py  json_crusher.py  prose.py  text.py
opto/dashboard/: __init__.py  server.py
opto/evals/: __init__.py  harness.py  tasks.py
opto/proxy/: __init__.py  server.py
tests/: test_copilot_auth.py  test_features.py  test_pipeline.py  test_structured_content.py
